<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>robotcar_tools</name>
  <version>0.0.0</version>
  <description>...</description>
  <maintainer email="mathias.buerki@mavt.ethz.ch">Mathias Buerki</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
